FIX dim layer z-index

--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 #toasted-container {
   z-index: 50 !important;
-  padding-bottom: 128px !important;
+  margin-bottom: 128px !important;
   font-family: Sans-serif !important;
 }
 
-@supports (padding-bottom: env(safe-area-inset-bottom)) {
+@supports (margin-bottom: env(safe-area-inset-bottom)) {
   #toasted-container {
     --safe-area-inset-bottom: env(safe-area-inset-bottom);
-    padding-bottom: calc(var(--safe-area-inset-bottom) + 128px) !important;
+    margin-bottom: calc(var(--safe-area-inset-bottom) + 128px) !important;
   }
 }
 
